src/objects/StudentTransferredCourse__c.object
<CustomObject>
    <description>Shows courses that were transferred to WGU. Child object of Student Transfer Instituition.</description>
    <fields>
        <fullName>CourseGroup__c</fullName>
        <label>Course Group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseTitle__c</fullName>
        <label>Course Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CourseType__c</fullName>
        <description>The type of course that is to be used. Used for STEM - Science, Technology, English, Math GPA calculation for admissions decisions</description>
        <inlineHelpText>The type of course that is to be used. Used for STEM - Science, Technology, English, Math GPA calculation for admissions decisions</inlineHelpText>
        <label>Course Type</label>
        <picklist>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <description>The course being transferred in to WGU</description>
        <inlineHelpText>The course being transferred in to WGU</inlineHelpText>
        <label>Course</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credits__c</fullName>
        <description>Number of credits of course</description>
        <label>Credits</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PushedToBanner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pushed To Banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StudentTransferInstitution__c</fullName>
        <label>Student Transfer Institution</label>
        <referenceTo>StudentTranscript__c</referenceTo>
        <relationshipName>TransferCourses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Subject of course</description>
        <label>Subject</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>Term of course</description>
        <label>Term</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferAttendance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transfer Attendance</label>
        <referenceTo>TransferAttendance__c</referenceTo>
        <relationshipLabel>Student Transferred Courses</relationshipLabel>
        <relationshipName>StudentTransferredCourses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transfer_Institution_Name__c</fullName>
        <formula>StudentTransferInstitution__r.TranscriptInstitution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transfer Institution Name</label>
        <type>Text</type>
    </fields>
    <label>Student Transferred Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Course__c</columns>
        <columns>CourseTitle__c</columns>
        <columns>Credits__c</columns>
        <columns>Grade__c</columns>
        <columns>Transfer_Institution_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Course ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Transferred Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>